--- a/package.json
+++ b/package.json
@@ -16,7 +16,31 @@
     "search",
     "replace"
   ],
-  "dependencies": {},
+  "scripts": {
+    "dev": "webpack-dev-server --mode development --config webpack.config.js"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^28.0.0",
+    "@ckeditor/ckeditor5-core": "^28.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^25.2.1",
+    "@ckeditor/ckeditor5-editor-classic": "^28.0.0",
+    "@ckeditor/ckeditor5-essentials": "^28.0.0",
+    "@ckeditor/ckeditor5-heading": "^28.0.0",
+    "@ckeditor/ckeditor5-inspector": "^2.2.2",
+    "@ckeditor/ckeditor5-list": "^28.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^28.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^28.0.0",
+    "@ckeditor/ckeditor5-ui": "^28.0.0",
+    "@ckeditor/ckeditor5-utils": "^28.0.0",
+    "@ckeditor/ckeditor5-widget": "^28.0.0",
+    "html-webpack-plugin": "4",
+    "postcss-loader": "^3.0.0",
+    "raw-loader": "^3.1.0",
+    "style-loader": "^1.3.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
+  },
   "peerDependencies": {
     "@ckeditor/ckeditor5-core": ">=21.0.0",
     "@ckeditor/ckeditor5-ui": ">=21.0.0",
